
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>at.a-sit</groupId>
	<artifactId>pdf-over</artifactId>
	<version>4.4.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>PDF-Over</name>
	<description>A tool to sign pdf documents</description>
	<url>https://technology.a-sit.at/en/pdf-over/</url>
	<inceptionYear>2012</inceptionYear>

	<organization>
		<name>A-SIT</name>
		<url>http://a-sit.at/</url>
	</organization>

	<developers>
		<developer>
			<id>tkellner</id>
			<name>Tobias Kellner</name>
			<email>tobias.kellner@egiz.gv.at</email>
			<organization>EGIZ</organization>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>vkrnjic</id>
			<name>Vesna Krnjic</name>
			<email>vesna.krnjic@egiz.gv.at</email>
			<organization>EGIZ</organization>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>afitzek</id>
			<name>Andreas Fitzek</name>
			<email>andreas.fitzek@egiz.gv.at</email>
			<organization>EGIZ</organization>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
        <developer>
			<id>aabraham</id>
			<name>Andreas Abraham</name>
			<email>andreas.abraham@egiz.gv.at</email>
			<organization>EGIZ</organization>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>EUPL v1.1</name>
			<url>http://joinup.ec.europa.eu/software/page/eupl/licence-eupl</url>
			<distribution>manually</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:http://git.egiz.gv.at/git/pdf-over</connection>
		<developerConnection>scm:git:git@gitlab.iaik.tugraz.at:egiz/pdf-over.git</developerConnection>
		<url>http://git.egiz.gv.at/pdf-over</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>JIRA</system>
		<url>http://jira.egovlabs.gv.at/browse/POF</url>
	</issueManagement>

	<modules>
		<module>pdf-over-commons</module>
		<module>pdf-over-gui</module>
		<module>pdf-over-signator</module>
		<module>pdf-over-signer</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<maven.compiler.release>17</maven.compiler.release>
		<pdfover-build.root-dir>${project.basedir}</pdfover-build.root-dir>
	</properties>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>license</report>
							<report>dependencies</report>
							<report>dependency-management</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<groupId>org.apache.maven.plugins</groupId>
					<version>3.10.1</version>
					<configuration>
						<verbose>true</verbose>
						<showWarnings>true</showWarnings>
						<showDeprecation>true</showDeprecation>
						<encoding>UTF-8</encoding>
						<debug>true</debug>
						<debuglevel>lines,vars,source</debuglevel>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<preparationGoals />
						<autoVersionSubmodules>true</autoVersionSubmodules>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.scm</groupId>
							<artifactId>maven-scm-provider-gitexe</artifactId>
							<version>1.8.1</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.10</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.15</version>
			</dependency>
<!--			<dependency>
  				<groupId>org.apache.httpcomponents</groupId>
  				<artifactId>httpclient</artifactId>
  				<version>4.5.3</version>
			</dependency>-->
			<dependency>
				<groupId>org.apache.httpcomponents.client5</groupId>
				<artifactId>httpclient5</artifactId>
				<version>5.0.3</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>3.1</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>com.sun</groupId>
				<artifactId>pdfview</artifactId>
				<version>1.0.5.1-katjas</version>
			</dependency>
			<dependency>
				<groupId>org.jpedal</groupId>
				<artifactId>jbig2</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>com.drewnoakes</groupId>
				<artifactId>metadata-extractor</artifactId>
				<version>2.9.1</version>
			</dependency>
			<dependency>
    			<groupId>javax.activation</groupId>
    			<artifactId>activation</artifactId>
    			<version>1.1.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>maven-central</id>
			<name>Maven Central Repository</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven 2</name>
			<url>https://download.java.net/maven/2/</url>
		</repository>
		<repository>
			<id>local-repo</id>
			<url>file://${pdfover-build.root-dir}/repo</url>
		</repository>
		<repository>
			<id>internal-repo</id>
			<name>Internal Repository</name>
			<url>https://apps.egiz.gv.at/maven/</url>
		</repository>
	</repositories>
</project>
